--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -31,7 +31,7 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Open Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
@@ -42,7 +42,7 @@
 }
 
 html {
-  font-family: sans-serif;
+  font-family: 'Open Sans', sans-serif;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -54,7 +54,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: -apple-system, BlinkMacSystemFont, "Open Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -396,7 +396,7 @@ h6, .h6 {
 }
 
 .display-1 {
-  font-size: 6rem;
+  font-size: 6.5rem;
   font-weight: 300;
   line-height: 1.2;
 }
@@ -422,8 +422,11 @@ h6, .h6 {
 hr {
   margin-top: 1rem;
   margin-bottom: 1rem;
+  margin: 0rem 10rem;
   border: 0;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  border-top: 1px solid rgb(255, 255, 255);
+  position: relative;
+  z-index: 9;
 }
 
 small,
@@ -2969,10 +2972,22 @@ fieldset:disabled a.btn {
 }
 
 .btn-lg, .btn-group-lg > .btn {
-  padding: 0.5rem 1rem;
+  padding: 2rem 4rem;
   font-size: 1.25rem;
   line-height: 1.5;
   border-radius: 0.3rem;
+}
+
+.btn-black {
+  color: #fff;
+  background-color: #000;
+  border-color: #000;
+}
+
+.btn-green-hover:hover {
+	background: #c1d82f;
+	color: #000;
+	border-color: #c1d82f;
 }
 
 .btn-sm, .btn-group-sm > .btn {
@@ -4058,15 +4073,25 @@ input[type="button"].btn-block {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
+  z-index: 9;
 }
 
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
+  transition:500ms ease;
+}
+
+.nav-item a {
+	color: #fff;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 1.5rem;
+	
 }
 
 .nav-link:hover, .nav-link:focus {
   text-decoration: none;
+  color: #c1d82f;
 }
 
 .nav-link.disabled {
@@ -4154,7 +4179,8 @@ input[type="button"].btn-block {
   align-items: center;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  padding: 0.5rem 1rem;
+  padding: 1rem 10rem;
+  z-index: 9999;
 }
 
 .navbar > .container,
@@ -4348,8 +4374,8 @@ input[type="button"].btn-block {
     position: absolute;
   }
   .navbar-expand-lg .navbar-nav .nav-link {
-    padding-right: 0.5rem;
-    padding-left: 0.5rem;
+    padding-right: 2rem;
+    padding-left: 3rem;
   }
   .navbar-expand-lg > .container,
   .navbar-expand-lg > .container-fluid {
