--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 
 
-body{min-height:800vh;}
+/*body{min-height:800vh;}*/
 
 #hero {
 	height: 100%;
@@ -27,6 +27,7 @@ body{min-height:800vh;}
 	min-height: 800px;
 }
 
+header,
 .navbar,
 .logo-header,
 .border-bottom,
@@ -100,6 +101,10 @@ header .overlay {
   z-index: 1;
 }
 
+header.scrolled {
+	display: none;
+}
+
 .text-pulse {
 	color: #c1d82f;
 }
@@ -118,7 +123,7 @@ header .overlay {
   width: 40px;
   height: 70px;
   margin-left: -20px;
-  top: 90%;
+  top: 85%;
   margin-top: -35px;
   box-shadow: inset 0 0 0 1px #fff;
   border-radius: 25px;
@@ -136,6 +141,15 @@ header .overlay {
   animation-duration: 1.5s;
   animation-iteration-count: infinite;
   animation-name: scroll;
+}
+
+.simpleParallax {
+	overflow: visible !important;
+}
+
+.shadowed {
+	 -webkit-filter: drop-shadow(0px 0px 50px rgba(0,0,0,0.5));
+ 	 filter: drop-shadow(0px 0px 50px rgba(0,0,0,0.5));
 }
 
 @keyframes scroll {
