--- a/css/styles.css
+++ b/css/styles.css
@@ -158,8 +158,11 @@
   color: #fff;
   background-color: #000;
   border-color: #000;
-	border-radius: 10px;
+  border-radius: 10px;
   padding: 3% 5%;
+  font-family: 'Open Sans', sans-serif;
+	font-weight: 700;
+	font-size: 1rem;
 }
 
 .btn-black:hover {
