--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,10 @@
 
 /*body{min-height:800vh;}*/
 
+.overflow-fix {
+	overflow-x: hidden;
+}
+
 .border-bottom,
 .darkgreen,
 .btn-black{
@@ -40,7 +44,7 @@
   margin-top: -35px;
   box-shadow: inset 0 0 0 1px #fff;
   border-radius: 25px;
-  z-index: 9;
+  z-index: 7;
 }
 
 .icon-scroll:before {
@@ -101,6 +105,7 @@
 	border-radius: 150px;
 	width: 250px;
 	height: 250px;
+	margin: 0 auto;
 }
 
 .content-title {
@@ -172,7 +177,7 @@
 }
 
 .greenshapes {
-	z-index: 11;
+	z-index: 8;
 	position: relative;
 	top: -25vw;
 }
